tools/tests/errors/surf_type_01.ki
# type/operator: subtraction is undefined for Strings
discard "a" - "b"
